# gnss-7-seg-clock

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-bake.hcl  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/gnss-7-seg-clock/: Cargo.toml  memory.x
crates/gnss-7-seg-clock/examples/: config-on-flash.rs  gnss-i2c-stream.rs  gnss-uart-pipe.rs  gnss-ubx-uart.rs  led-flash.rs  seven-seg-flash.rs
crates/gnss-7-seg-clock/src/: display.rs  events.rs  flash.rs  lib.rs  main.rs  max_m10s.rs
crates/misc/: Cargo.toml
crates/misc/src/: crlf_stream.rs  lib.rs
crates/nmea/: Cargo.toml
crates/nmea/src/: error.rs  lib.rs  messages.rs  parser.rs
crates/nmea/src/messages/: rmc.rs  txt.rs
crates/ubx/: Cargo.toml
crates/ubx/src/: lib.rs
hardware/: fp-lib-table  gnss-7-seg-clock.kicad_dru  gnss-7-seg-clock.kicad_pcb  gnss-7-seg-clock.kicad_pro  gnss-7-seg-clock.kicad_sch  gnss-7-seg-clock.kicad_sym  sym-lib-table
hardware/3d_models/: LSD150.step  LSD150BAG-101.step  PTS810.step
hardware/gnss-7-seg-clock.pretty/: Display_7Segment_1.5inch_P2.45mm.kicad_mod  MAX-M10S.kicad_mod  QFN-56-1EP_7x7mm_P0.4mm_EP3.2x3.2mm_HandSolder.kicad_mod  SW_SPST_PTS810_HandSolder.kicad_mod  USB_C_Receptacle_GCT_USB4105-xx-A_16P_TopMnt_Horizontal.kicad_mod  USB_C_Receptacle_GCT_USB4105-xx-A_16P_TopMnt_Horizontal_HandSolder.kicad_mod
