[workspace]
resolver = "2"
members = [
  "crates/*",
]
default-members = ["crates/gnss-7-seg-clock"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies.misc]
path = "crates/misc"

[workspace.dependencies.nmea]
path = "crates/nmea"

[workspace.dependencies.chrono]
version = "0.4.41"
default-features = false

[workspace.dependencies.cortex-m]
version = "0.7.7"

[workspace.dependencies.cortex-m-rt]
version = "0.7.5"

[workspace.dependencies.defmt]
version = "1.0.1"

[workspace.dependencies.defmt-rtt]
version = "0.4.2"

[workspace.dependencies.embassy-executor]
version = "0.7.0"
features = [
  "arch-cortex-m",
  "defmt",
  "executor-interrupt",
  "executor-thread",
  "task-arena-size-98304",
]

[workspace.dependencies.embassy-futures]
version = "0.1.1"
features = ["defmt"]

[workspace.dependencies.embassy-rp]
version = "0.3.0"
features = [
  "boot2-w25q080",
  "critical-section-impl",
  "defmt",
  "rp2040",
  "time-driver",
  "unstable-pac",
]

[workspace.dependencies.embassy-sync]
version = "0.6.2"
features = ["defmt"]

[workspace.dependencies.embassy-time]
version = "0.4.0"
features = [
  "defmt",
  "defmt-timestamp-uptime"
]

[workspace.dependencies.embassy-usb]
version = "0.4.0"
default-features = false
features = ["defmt"]

[workspace.dependencies.embedded-io-async]
version = "0.6.1"
features = ["defmt-03"]

[workspace.dependencies.nom]
version = "8.0.0"
default-features = false

[workspace.dependencies.panic-probe]
version = "0.3.2"
features = ["print-defmt"]

# NOTE: needs to be added explicitly when using static_cell
[workspace.dependencies.portable-atomic]
version = "1.11.1"
default-features = false
features = ["critical-section"]

[workspace.dependencies.postcard]
version = "1.1.1"
default-features = false
features = ["use-defmt"]

[workspace.dependencies.serde]
version = "1.0.219"
default-features = false

[workspace.dependencies.static_cell]
version = "2.1.1"

[patch.crates-io.embassy-futures]
git = "https://github.com/embassy-rs/embassy.git"
rev = "2e7a2b61275d70d7d09cb676490e2cba4d2bde3f"

[profile.dev]
codegen-units = 1
debug = 2
incremental = false

[profile.release]
codegen-units = 1
debug = 2
incremental = false
lto = true
