[package]
name = "gnss-7-seg-clock"
version.workspace = true
edition.workspace = true

default-run = "gnss-7-seg-clock"

[dependencies.misc]
workspace = true

[dependencies.nmea]
features = ["defmt"]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.cortex-m]
workspace = true

[dependencies.cortex-m-rt]
workspace = true

[dependencies.defmt]
workspace = true

[dependencies.defmt-rtt]
workspace = true

[dependencies.embassy-executor]
workspace = true

[dependencies.embassy-futures]
workspace = true

[dependencies.embassy-rp]
workspace = true

[dependencies.embassy-sync]
workspace = true

[dependencies.embassy-time]
workspace = true

[dependencies.embassy-usb]
workspace = true

[dependencies.embedded-io-async]
workspace = true

[dependencies.panic-probe]
workspace = true

[dependencies.portable-atomic]
workspace = true

[dependencies.postcard]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.static_cell]
workspace = true
